--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-teszt
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>C: AoA info</title>
+</head>
+<body style="background-color: black; color: lightgray; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
+    <h2 style="color: slategrey; font-weight: lighter; text-align: center;">UNLEASH</h2>
+    <h1 style="color: white; font-size: 250%; text-align: center;">THE DRAGONS</h1>
+    <p style="font-weight: bold;">
+        Versenyezz egy intenzív online játékban és fedezd fel a gyors tempójú Century: age of Ashes-t! Merülj bele az arénába egyedül, vagy barátokkal és harcolj a túlélésért! Játsz három változatos játék móddal amik  3v3-tól 6v6-os harcig terjednek.
+    </p>
+    <hr>
+    <p>
+        <span style="font-weight: bold; font-size: x-large;">
+        Spoils of War: 
+        </span>Lopj aranyat hatalmas lényektől és az ellenséges csapattól, miközben a saját aranyfészkedet véded, és alkalmazkodj különféle kiszámíthatatlan helyzetekhez!
+    </p>
+    <p>
+        <span style="font-weight: bold; font-size: x-large;">
+            Carnage:
+        </span>
+        Egy 6v6 vérengzés különleges erőkkel amik felbukkannak az arénában, hogy elszabadísd a poklot az ellenfeleiden. Team Deathmatch, Sárkány lovagló stílusban!
+    </p>
+    <p>
+        <span style="font-weight: bold; font-size: x-large;">
+            Gates of Fire: 
+        </span>
+        Egy egyedi mód amiben kettó csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréná körül, miközben birtoklod a zászlót!
+    </p>
+</body>
+</html>
