--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C: AoA info</title>
 </head>
-<body style="background-color: black; color: lightgray; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
+
+<body style="background-color: rgb(20, 20, 20); color: darkgrey; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
     <h2 style="color: slategrey; font-weight: lighter; text-align: center;">UNLEASH</h2>
     <h1 style="color: white; font-size: 250%; text-align: center;">THE DRAGONS</h1>
+
     <p style="font-weight: bold;">
         Versenyezz egy intenzív online játékban és fedezd fel a gyors tempójú Century: age of Ashes-t! Merülj bele az arénába egyedül, vagy barátokkal és harcolj a túlélésért! Játsz három változatos játék móddal amik  3v3-tól 6v6-os harcig terjednek.
     </p>
