--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C: AoA info</title>
 </head>
+<body style="background-color: rgb(20, 20, 20); color: #A0A0A0; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
 
-<body style="background-color: rgb(20, 20, 20); color: darkgrey; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
-    <h2 style="color: slategrey; font-weight: lighter; text-align: center;">UNLEASH</h2>
-    <h1 style="color: white; font-size: 250%; text-align: center;">THE DRAGONS</h1>
+
+    <h1 style="color: white; font-size: 250%; text-align: center;">UNLEASH THE DRAGONS</h1>
+
+    <a href="https://www.century-age-of-ashes.com/">Forrás</a>
+
+    <h2 style="color: white;">Intenzív aréna harcok</h2>
 
     <p style="font-weight: bold;">
         Versenyezz egy intenzív online játékban és fedezd fel a gyors tempójú Century: age of Ashes-t! Merülj bele az arénába egyedül, vagy barátokkal és harcolj a túlélésért! Játsz három változatos játék móddal amik  3v3-tól 6v6-os harcig terjednek.
@@ -32,5 +36,57 @@
         </span>
         Egy egyedi mód amiben kettó csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréná körül, miközben birtoklod a zászlót!
     </p>
+    <hr>
+
+
+    <h2 style="color: white;">Teljes testreszabás</h2>
+    <p style="font-weight: bold;">
+        Tűnj ki a csatatéren tekintélyes felszereléssel és legendás sárkányokkal, amelyeket csak az igazi sárkánylovasok bírtokolhatnak! Ahogy haladsz előre, minden szintlépéssel új lehetőségek tárulnak fel ahhoz, hogy testre szabd a karaktereidet és sárkányaidat.
+    </p>
+    <p>
+        <span style="font-weight: bold; font-size: x-large;">
+            Sárkányok és lovasok: 
+        </span>
+        A Century: Age of Ashes-ben kinézeti tárgyakat szerezhetsz azzal, hogy játszasz, vagy vásárolsz. Szabd testre a sárkányodat legendás kinézetekkel, csillogó páncélokkal, káprázatos nyergekkel és még sok mással. Fokozhatod a lovasod stílusát is gondosan kialakított páncélokkal, fegyverekkel, köpenyekkel... Minden ami ahhoz kell, hogy ragyogj az arénában!
+    </p>
+    <p>
+        <span style="font-weight: bold; font-size: x-large;">
+            Csak kinézeti tárgyak: 
+        </span>
+        Minden játékbeli fizetéssel csak is kinézeti tárgyakat lehet szerezni. Így aki szeretne az vehet magának menő kinézeteket, de aki ingyen szertne játszani, annak nem kell aggódnia attól, hogy akik fizetnek több előnyhöz jutnak.
+    </p>
+    <hr>
+
+
+    <p style="font-weight: bold; font-size: xx-large;">
+        Képességek
+    </p>
+    <p>
+        <span style="font-weight: bold;">Füst bomba: </span>
+        Kiereszt egy mérgező füstöt, ami megvakítja az ellenfeleket.
+        <br>
+        <span style="font-weight: bold;">Lökéshullám: </span>
+        Ellöki az ellenfeleket detonálásnál.
+        <br>
+        <span style="font-weight: bold;">Akna: </span>
+        Hozzátapad a falhoz és felrobban amikor az ellenfél aktiválja.
+        <br>
+        <span style="font-weight: bold;">Széllökés: </span>
+        Elpusztítja az ellenséges tűzgójókat amik téged céloznak, kis időre becélozhatatlanná téve.
+        <br>
+        <span style="font-weight: bold;">Jég csapok: </span>
+        Kienged három lövedéket, amik nagy pajzs sebzést okoznak, illetve visszafogják a pajzstalan ellenségek kanyarodási képességét.
+        <span style="font-weight: bold;">Vakitó hullám: </span>
+        Kienged egy energia hullámot abba az irányba amerre nézel. Sebzést és vakságot okoz az érintett ellenségeknek egy kis időre.
+    </p>
+    <hr>
+
+
+    <h1 style="color: white; font-size: 250%; text-align: center;">VÁLASZD KI A JÁTÉKSTÍLUSOD</h1>
+    <a href="Skeldian_Windguard.html">
+        <img src="Windguard.jpg" alt="Windguard" width="15%">
+        <h2>Windguard</h2>
+    </a>
+
 </body>
 </html>
