--- a/index.html
+++ b/index.html
@@ -5,33 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C: AoA info</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: rgb(20, 20, 20); color: #A0A0A0; font-size: larger; font-family: Arial, Helvetica, sans-serif;">
+<body>
 
 
-    <h1 style="color: white; font-size: 250%; text-align: center;">UNLEASH THE DRAGONS</h1>
+    <h1 class="main-header">UNLEASH THE DRAGONS</h1>
 
-    <a href="https://www.century-age-of-ashes.com/">Forrás</a>
+    <a href="https://www.century-age-of-ashes.com/" target="Century:_Age_of_Ashes">Eredeti weboldal</a>
 
-    <h2 style="color: white;">Intenzív aréna harcok</h2>
+    <h2>Intenzív aréna harcok</h2>
 
-    <p style="font-weight: bold;">
+    <p class=" text-L">
         Versenyezz egy intenzív online játékban és fedezd fel a gyors tempójú Century: age of Ashes-t! Merülj bele az arénába egyedül, vagy barátokkal és harcolj a túlélésért! Játsz három változatos játék móddal amik  3v3-tól 6v6-os harcig terjednek.
     </p>
     <hr>
     <p>
-        <span style="font-weight: bold; font-size: x-large;">
+        <span class=" text-L color-CCC">
         Spoils of War: 
         </span>Lopj aranyat hatalmas lényektől és az ellenséges csapattól, miközben a saját aranyfészkedet véded, és alkalmazkodj különféle kiszámíthatatlan helyzetekhez!
     </p>
     <p>
-        <span style="font-weight: bold; font-size: x-large;">
+        <span class=" text-L color-CCC">
             Carnage:
         </span>
         Egy 6v6 vérengzés különleges erőkkel amik felbukkannak az arénában, hogy elszabadísd a poklot az ellenfeleiden. Team Deathmatch, Sárkány lovagló stílusban!
     </p>
     <p>
-        <span style="font-weight: bold; font-size: x-large;">
+        <span class=" text-L color-CCC">
             Gates of Fire: 
         </span>
         Egy egyedi mód amiben kettó csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréná körül, miközben birtoklod a zászlót!
@@ -39,18 +40,18 @@
     <hr>
 
 
-    <h2 style="color: white;">Teljes testreszabás</h2>
-    <p style="font-weight: bold;">
+    <h2>Teljes testreszabás</h2>
+    <p class=" text-L">
         Tűnj ki a csatatéren tekintélyes felszereléssel és legendás sárkányokkal, amelyeket csak az igazi sárkánylovasok bírtokolhatnak! Ahogy haladsz előre, minden szintlépéssel új lehetőségek tárulnak fel ahhoz, hogy testre szabd a karaktereidet és sárkányaidat.
     </p>
     <p>
-        <span style="font-weight: bold; font-size: x-large;">
+        <span class=" text-L color-CCC">
             Sárkányok és lovasok: 
         </span>
         A Century: Age of Ashes-ben kinézeti tárgyakat szerezhetsz azzal, hogy játszasz, vagy vásárolsz. Szabd testre a sárkányodat legendás kinézetekkel, csillogó páncélokkal, káprázatos nyergekkel és még sok mással. Fokozhatod a lovasod stílusát is gondosan kialakított páncélokkal, fegyverekkel, köpenyekkel... Minden ami ahhoz kell, hogy ragyogj az arénában!
     </p>
     <p>
-        <span style="font-weight: bold; font-size: x-large;">
+        <span class=" text-L color-CCC">
             Csak kinézeti tárgyak: 
         </span>
         Minden játékbeli fizetéssel csak is kinézeti tárgyakat lehet szerezni. Így aki szeretne az vehet magának menő kinézeteket, de aki ingyen szertne játszani, annak nem kell aggódnia attól, hogy akik fizetnek több előnyhöz jutnak.
@@ -58,36 +59,26 @@
     <hr>
 
 
-    <p style="font-weight: bold; font-size: xx-large;">
-        Képességek
-    </p>
-    <p>
-        <span style="font-weight: bold;">Füst bomba: </span>
-        Kiereszt egy mérgező füstöt, ami megvakítja az ellenfeleket.
-        <br>
-        <span style="font-weight: bold;">Lökéshullám: </span>
-        Ellöki az ellenfeleket detonálásnál.
-        <br>
-        <span style="font-weight: bold;">Akna: </span>
-        Hozzátapad a falhoz és felrobban amikor az ellenfél aktiválja.
-        <br>
-        <span style="font-weight: bold;">Széllökés: </span>
-        Elpusztítja az ellenséges tűzgójókat amik téged céloznak, kis időre becélozhatatlanná téve.
-        <br>
-        <span style="font-weight: bold;">Jég csapok: </span>
-        Kienged három lövedéket, amik nagy pajzs sebzést okoznak, illetve visszafogják a pajzstalan ellenségek kanyarodási képességét.
-        <br>
-        <span style="font-weight: bold;">Vakitó hullám: </span>
-        Kienged egy energia hullámot abba az irányba amerre nézel. Sebzést és vakságot okoz az érintett ellenségeknek egy kis időre.
-    </p>
+    <h2>Képességek</h2>
+    <ul>
+        <li><span class=" text-L color-CCC">Füst nyom(smoke trail): </span>Kiereszt egy mérgező füstöt, ami megvakítja az ellenfeleket.</li>
+        <li><span class=" text-L color-CCC">Robbanás(blast): </span>Ellöki az ellenfeleket detonálásnál.</li>
+        <li><span class=" text-L color-CCC">Akna(mine): </span>Hozzátapad a falhoz és felrobban amikor az ellenfél aktiválja.</li>
+        <li><span class=" text-L color-CCC">Széllökés(gust): </span>Elpusztítja az ellenséges tűzgójókat amik téged céloznak, kis időre becélozhatatlanná téve.</li>
+        <li><span class=" text-L color-CCC">Jég csapok(frost bolts): </span>Kienged három lövedéket, amik nagy pajzs sebzést okoznak, illetve visszafogják a pajzstalan ellenségek kanyarodási képességét.</li>
+        <li><span class=" text-L color-CCC">Vakitó hullám(blinding wave): </span>Kienged egy energia hullámot abba az irányba amerre nézel. Sebzést és vakságot okoz az érintett ellenségeknek egy kis időre.</li>
+    </ul>
     <hr>
 
 
-    <h1 style="color: white; font-size: 250%; text-align: center;">VÁLASZD KI A JÁTÉKSTÍLUSOD</h1>
+    <h1 class="main-header">VÁLASZD KI A JÁTÉKSTÍLUSOD</h1>
     <a href="Skeldian_Windguard.html">
-        <img src="Windguard.jpg" alt="Windguard" width="15%">
+        <img src="Windguard.jpg" alt="Windguard" width="250px">
         <h2>Windguard</h2>
     </a>
-
+    <a href="Naerdor_Phantom.html">
+        <img src="Phantom.jpg" alt="Phantom" width="250px">
+        <h2>Phantom</h2>
+    </a>
 </body>
 </html>
