--- a/Skeldian_Windguard.html
+++ b/Skeldian_Windguard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Windguard</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="SW-html">
     <a href="index.html">Vissza</a>
     
     <h1 class="main-header">Windguard</h1>
@@ -34,5 +34,6 @@
     <p class="bold text-L">
         Arra képezve, hogy védje a kontinens legnagyobb királyságát, a Windguard a gerince a Skeld hadseregnek. Egy lovagrend, a hátasuk erejével megvédik a szövedségeseket minden áron.
     </p>
+    <!-- <img src="Windguard.jpg" alt="Windguard" width="250px"> -->
 </body>
 </html>
