--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>C: AoA info</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="main-html">
 
 
     <h1 class="main-header">UNLEASH THE DRAGONS</h1>
 
     <a href="https://www.century-age-of-ashes.com/" target="Century:_Age_of_Ashes">Eredeti weboldal</a>
-
+    <div>
     <h2>Intenzív aréna harcok</h2>
 
     <p class=" text-L">
@@ -38,8 +38,9 @@
         Egy egyedi mód amiben kettó csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréná körül, miközben birtoklod a zászlót!
     </p>
     <hr>
+    </div>
 
-
+    <div>
     <h2>Teljes testreszabás</h2>
     <p class=" text-L">
         Tűnj ki a csatatéren tekintélyes felszereléssel és legendás sárkányokkal, amelyeket csak az igazi sárkánylovasok bírtokolhatnak! Ahogy haladsz előre, minden szintlépéssel új lehetőségek tárulnak fel ahhoz, hogy testre szabd a karaktereidet és sárkányaidat.
@@ -57,8 +58,9 @@
         Minden játékbeli fizetéssel csak is kinézeti tárgyakat lehet szerezni. Így aki szeretne az vehet magának menő kinézeteket, de aki ingyen szertne játszani, annak nem kell aggódnia attól, hogy akik fizetnek több előnyhöz jutnak.
     </p>
     <hr>
+    </div>
 
-
+    <div>
     <h2>Képességek</h2>
     <ul>
         <li><span class=" text-L color-CCC">Füst nyom(smoke trail): </span>Kiereszt egy mérgező füstöt, ami megvakítja az ellenfeleket.</li>
@@ -69,16 +71,19 @@
         <li><span class=" text-L color-CCC">Vakitó hullám(blinding wave): </span>Kienged egy energia hullámot abba az irányba amerre nézel. Sebzést és vakságot okoz az érintett ellenségeknek egy kis időre.</li>
     </ul>
     <hr>
+    </div>
 
-
+    <div>
     <h1 class="main-header">VÁLASZD KI A JÁTÉKSTÍLUSOD</h1>
+    <a href="Svard_Maraduer.html">
+        <h2>Maraduer</h2>
+    </a>
     <a href="Skeldian_Windguard.html">
-        <img src="Windguard.jpg" alt="Windguard" width="250px">
         <h2>Windguard</h2>
     </a>
     <a href="Naerdor_Phantom.html">
-        <img src="Phantom.jpg" alt="Phantom" width="250px">
         <h2>Phantom</h2>
     </a>
+    </div>
 </body>
 </html>
