--- a/Naerdor_Phantom.html
+++ b/Naerdor_Phantom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Phantom</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="NP-html">
     <a href="index.html">Vissza</a>
 
     <h1 class="main-header">Phantom</h1>
@@ -36,5 +36,6 @@
     <p class="bold text-L">
         Keletről érkeztek, a Phaontomok állítólag az első sárányrendek leszármozattai. Rejtélyes , tüskés vadállatokat lovagolnak, képesek elmenekülni a haláltól, vagy azt okozni bármikor köszönhetően a képességüknek, hogy láthatatlanná válljanak az egekben.
     </p>
+    <!-- <img src="Phantom.jpg" alt="Phantom" width="250px"> -->
 </body>
 </html>
