--- a/Naerdor_Phantom.html
+++ b/Naerdor_Phantom.html
@@ -7,7 +7,7 @@
     <title>Phantom</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="NP-html">
+<body id="NP-html">
     <a href="index.html">Vissza</a>
 
     <h1 class="main-header">Phantom</h1>
