--- a/Skeldian_Windguard.html
+++ b/Skeldian_Windguard.html
@@ -7,7 +7,7 @@
     <title>Windguard</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="SW-html">
+<body id="SW-html">
     <a href="index.html">Vissza</a>
     
     <h1 class="main-header">Windguard</h1>
