--- a/Svard_Maraduer.html
+++ b/Svard_Maraduer.html
@@ -7,7 +7,7 @@
     <title>Maraduer</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="SM-html">
+<body id="SM-html">
     <a href="index.html">Vissza</a>
 
     <h1 class="main-header">Phantom</h1>
