--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>C: AoA info</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="main-html">
-
+<body id="main-html">
 
     <h1 class="main-header">UNLEASH THE DRAGONS</h1>
 
@@ -75,15 +74,43 @@
 
     <div>
     <h1 class="main-header">VÁLASZD KI A JÁTÉKSTÍLUSOD</h1>
-    <a href="Svard_Maraduer.html">
-        <h2>Maraduer</h2>
-    </a>
-    <a href="Skeldian_Windguard.html">
-        <h2>Windguard</h2>
-    </a>
-    <a href="Naerdor_Phantom.html">
-        <h2>Phantom</h2>
-    </a>
+    
+    <table>
+        <tr>
+            <td>
+                <a href="Svard_Maraduer.html">
+                    <h2>Maraduer</h2>
+                </a>
+            </td>
+            <td>
+                <a href="Skeldian_Windguard.html">
+                    <h2>Windguard</h2>
+                </a>
+            </td>
+            <td>
+                <a href="Naerdor_Phantom.html">
+                    <h2>Phantom</h2>
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="Svard_Maraduer.html">
+                    <img src="Marauder.jpg" alt="Maraduer" class="table-jpg">
+                </a>
+            </td>
+            <td>
+                <a href="Skeldian_Windguard.html">
+                    <img src="Windguard.jpg" alt="Windguard" class="table-jpg">
+                </a>
+            </td>
+            <td>
+                <a href="Naerdor_Phantom.html">
+                    <img src="Phantom.jpg" alt="Phantom" class="table-jpg">
+                </a>
+            </td>
+        </tr>
+    </table>
     </div>
 </body>
 </html>
