--- a/Naerdor_Phantom.html
+++ b/Naerdor_Phantom.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="NP-html">
-    <a href="index.html">Vissza</a>
+    <a href="index.html" class="footer"><h2>Vissza a főoldalra</h2></a>
 
     <h1 class="main-header">Phantom</h1>
 
@@ -28,7 +28,7 @@
 
     <h2>Képességek</h2>
     <p>
-        A phantomok "aknát" és "robbanást" használnak
+        A phantomok "Mine"-t és "Blast"-ot használnak
     </p>
     <hr>
 
