--- a/Stormraiser.html
+++ b/Stormraiser.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maraduer</title>
+    <title>Stormraiser</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="SM-html">
+<body id="SR-html">
     <a href="index.html" class="footer"><h2>Vissza a főoldalra</h2></a>
 </body>
 </html>
