--- a/Naerdor_Phantom.html
+++ b/Naerdor_Phantom.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="NP-html">
-    <a href="index.html" class="footer"><h2>Vissza a főoldalra</h2></a>
+    <div class="header">
+        <a href="index.html">
+            <h2>Vissza a főoldalra</h2>
+        </a>
+        <a href="https://store.epicgames.com/en-US/p/century-age-of-ashes" target="epic">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/1764px-Epic_Games_logo.svg.png" alt="epic-download" title="Epic Games letöltés">
+        </a>
+        <a href="https://store.steampowered.com/app/918570/Century_Age_of_Ashes/" target="steam">
+            <img src="https://cdn.freebiesupply.com/images/large/2x/steam-logo-black-transparent.png" alt="Steam download" title="Steam letölés">
+        </a>
+    </div>
 
     <h1 class="main-header">Phantom</h1>
 
@@ -27,15 +37,12 @@
     </p>
 
     <h2>Képességek</h2>
-    <p>
-        A phantomok "Mine"-t és "Blast"-ot használnak
-    </p>
+    <p>A phantomok "Mine"-t és "Blast"-ot használnak</p>
     <hr>
 
     <h1 class="main-header">Háttérsztori</h1>
     <p class="bold text-L">
         Keletről érkeztek, a Phaontomok állítólag az első sárányrendek leszármozattai. Rejtélyes , tüskés vadállatokat lovagolnak, képesek elmenekülni a haláltól, vagy azt okozni bármikor köszönhetően a képességüknek, hogy láthatatlanná válljanak az egekben.
     </p>
-    <!-- <img src="Phantom.jpg" alt="Phantom" width="250px"> -->
 </body>
 </html>
