--- a/Stormraiser.html
+++ b/Stormraiser.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="SR-html">
-    <a href="index.html" class="footer"><h2>Vissza a főoldalra</h2></a>
+    <div class="header">
+        <a href="index.html">
+            <h2>Vissza a főoldalra</h2>
+        </a>
+        <a href="https://store.epicgames.com/en-US/p/century-age-of-ashes" target="epic">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/1764px-Epic_Games_logo.svg.png" alt="epic-download" title="Epic Games letöltés">
+        </a>
+        <a href="https://store.steampowered.com/app/918570/Century_Age_of_Ashes/" target="steam">
+            <img src="https://cdn.freebiesupply.com/images/large/2x/steam-logo-black-transparent.png" alt="Steam download" title="Steam letölés">
+        </a>
+    </div>
 </body>
 </html>
