--- a/Svard_Maraduer.html
+++ b/Svard_Maraduer.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="SM-html">
-    <a href="index.html" class="footer"><h2>Vissza a főoldalra</h2></a>
+    <div class="header">
+        <a href="index.html">
+            <h2>Vissza a főoldalra</h2>
+        </a>
+        <a href="https://store.epicgames.com/en-US/p/century-age-of-ashes" target="epic">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/1764px-Epic_Games_logo.svg.png" alt="epic-download" title="Epic Games letöltés">
+        </a>
+        <a href="https://store.steampowered.com/app/918570/Century_Age_of_Ashes/" target="steam">
+            <img src="https://cdn.freebiesupply.com/images/large/2x/steam-logo-black-transparent.png" alt="Steam download" title="Steam letölés">
+        </a>
+    </div>
+
+    <h1 class="main-header">Windguard</h1>
+
+    <h2>Bloodchaser</h2>
+    <p>
+        A végső alfa ragadozó, képes a vér illatát a hegyek tetejéről ahol lakik.
+    </p>
+
+    <h2>Hunter's mark</h2>
+    <p>
+        Eldob egy tűzgolyót ami leköveti a becélzott elleséget.
+        <br>
+        Támadások a követett ellenség ellen többet sebeznek.
+    </p>
+
+    <h2>Képességek</h2>
+    <p>
+        A Maraduer-ek Gust-ot és Frost Bolts-ot használnak.
+    </p>
+    <hr>
+
+    <h1 class="main-header">Háttérsztori</h1>
+    <p class="bold text-L">
+        Nem tartoznak hűséggel egy királysághoz, vagy hazához. A Maraduer-ek képzett és könyörtelen fejvadászként ismertek.
+        <br>
+        A hátasuk követő képességét használva lekövetnek minden élőlényt minden körülmény között. Sose hagynak föl a prédájukkal.
+    </p>
 </body>
 </html>
