--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="main-html">
-    <a href="https://www.century-age-of-ashes.com/" target="Century:_Age_of_Ashes" class="footer">
-        <h2>Eredeti weboldal</h2>
-    </a>
+    
+    <div class="header">
+        <a href="https://www.century-age-of-ashes.com/" target="Century:_Age_of_Ashes">
+            <h2>Eredeti weboldal</h2>
+        </a>
+        <a href="https://store.epicgames.com/en-US/p/century-age-of-ashes" target="epic">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/1764px-Epic_Games_logo.svg.png" alt="epic-download" title="Epic Games letöltés">
+        </a>
+        <a href="https://store.steampowered.com/app/918570/Century_Age_of_Ashes/" target="steam">
+            <img src="https://cdn.freebiesupply.com/images/large/2x/steam-logo-black-transparent.png" alt="Steam download" title="Steam letölés">
+        </a>
+    </div>
 
     <h1 class="main-header">UNLEASH THE DRAGONS</h1>
 
