--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class=" text-L color-CCC">Carnage: </span>Egy 6v6 vérengzés különleges erőkkel, amik felbukkannak az arénában, hogy elszabadítsd a poklot az ellenfeleiden. Team Deathmatch, Sárkány lovagló stílusban!
         </li>
         <li>
-            <span class=" text-L color-CCC">Gates of Fire: </span>Egy egyedi mód, amiben kettő csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréná körül, miközben birtoklod a zászlót!
+            <span class=" text-L color-CCC">Gates of Fire: </span>Egy egyedi mód, amiben kettő csapat csap össze a zászló birtoklásáért. Szerezz pontokat különleges kapuk átrepülése által az aréna körül, miközben birtoklod a zászlót!
         </li>
     </ul>
 
