--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="main-html">
-    <div class="header">
+    <div class="footer">
         <a href="https://www.century-age-of-ashes.com/">
             <h2>Eredeti weboldal</h2>
         </a>
@@ -33,7 +33,7 @@
     <h2>Játékmódok</h2>
     <ul>
         <li>
-            <span class=" text-L color-CCC">Spoils of War: </span> aranyat hatalmas lényektől és az ellenséges csapattól, miközben a saját aranyfészkedet véded, és alkalmazkodj különféle kiszámíthatatlan helyzetekhez!
+            <span class=" text-L color-CCC">Spoils of War: </span>Lopj aranyat hatalmas lényektől és az ellenséges csapattól, miközben a saját aranyfészkedet véded, és alkalmazkodj különféle kiszámíthatatlan helyzetekhez!
         </li>
         <li>
             <span class=" text-L color-CCC">Carnage: </span>Egy 6v6 vérengzés különleges erőkkel, amik felbukkannak az arénában, hogy elszabadítsd a poklot az ellenfeleiden. Team Deathmatch, Sárkány lovagló stílusban!
@@ -47,23 +47,25 @@
     </div>
 
     <div>
-    <h2>Teljes testre szabás</h2>
+    <h2>Teljes testreszabás</h2>
     <p class=" text-L">
         Tűnj ki a csatatéren tekintélyes felszereléssel és legendás sárkányokkal, amelyeket csak az igazi sárkánylovasok birtokolhatnak! Ahogy haladsz előre, minden szintlépéssel új lehetőségek tárulnak fel ahhoz, hogy testre szabd a karaktereidet és sárkányaidat.
     </p>
-    <p>
-        <span class=" text-L color-CCC">
-            Sárkányok és lovasok: 
-        </span>
-        A Century: Age of Ashes-ben kinézeti tárgyakat szerezhetsz azzal, hogy játszol, vagy vásárolsz. Szabd testre a sárkányodat legendás kinézetekkel, csillogó páncélokkal, káprázatos nyergekkel és még sok mással. Fokozhatod a lovasod stílusát is gondosan kialakított páncélokkal, fegyverekkel, köpenyekkel... Minden, ami ahhoz kell, hogy ragyogj az arénában!
-    </p>
-    <p>
-        <span class=" text-L color-CCC">
-            Csak kinézeti tárgyak: 
-        </span>
-        Minden játék béli fizetéssel csak is kinézeti tárgyakat lehet szerezni. Így aki szeretne az vehet magának menő kinézeteket, de aki ingyen szeretne játszani, annak nem kell aggódnia attól, hogy akik fizetnek több előnyhöz jutnak.
-    </p>
-    <hr>
+    <ul>
+        <li>
+            <span class=" text-L color-CCC">
+                Sárkányok és lovasok: 
+            </span>
+            A Century: Age of Ashes-ben kinézeti tárgyakat szerezhetsz azzal, hogy játszol, vagy vásárolsz. Szabd testre a sárkányodat legendás kinézetekkel, csillogó páncélokkal, káprázatos nyergekkel és még sok mással. Fokozhatod a lovasod stílusát is gondosan kialakított páncélokkal, fegyverekkel, köpenyekkel... Minden, ami ahhoz kell, hogy ragyogj az arénában!
+        </li>
+        <li>
+            <span class=" text-L color-CCC">
+                Csak kinézeti tárgyak: 
+            </span>
+            Minden játék béli fizetéssel csak is kinézeti tárgyakat lehet szerezni. Így aki szeretne az vehet magának menő kinézeteket, de aki ingyen szeretne játszani, annak nem kell aggódnia attól, hogy akik fizetnek több előnyhöz jutnak.
+        </li>
+    </ul>
+        <hr>
     </div>
 
     <div>
