--- a/Skeldian_Windguard.html
+++ b/Skeldian_Windguard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="SW-html">
-    <div class="header">
+    <div class="footer">
         <a href="index.html">
             <h2>Vissza a főoldalra</h2>
         </a>
