footer -> header + CSS "optimalizálás"

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="main-html">
-    <div class="footer">
-        <a href="https://www.century-age-of-ashes.com/">
+    <div class="header">
+        <a href="https://www.century-age-of-ashes.com/" target="Century">
             <h2>Eredeti weboldal</h2>
         </a>
         <a href="https://store.epicgames.com/en-US/p/century-age-of-ashes" target="epic">
