--- a/Svard_Maraduer.html
+++ b/Svard_Maraduer.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="SM-html">
-    <div class="footer">
+    <div class="header">
         <a href="index.html">
             <h2>Vissza a főoldalra</h2>
         </a>
