Félre írás maraduer.html-ben

--- a/Svard_Maraduer.html
+++ b/Svard_Maraduer.html
@@ -20,7 +20,7 @@
         </a>
     </div>
 
-    <h1 class="main-header">Windguard</h1>
+    <h1 class="main-header">Maraduer</h1>
 
     <h2>Bloodchaser</h2>
     <p>
