--- a/Stormraiser.html
+++ b/Stormraiser.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormraiser</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body id="SR-html">
     <div class="header">
@@ -42,7 +45,7 @@
     <hr>
 
     <h1>Háttérsztori</h1>
-    <p>
+    <p class="bold text-L">
         Mind a spirituális vezetők, mind a valküri tartomány őrzői, a Stormraiser-ek egy több korszakra visszanyúló hagyományt ápolnak. Csökkenő számuk ellenére, a viharban való uralmuk több száz erejét biztosítja számukra.
     </p>
 </body>
